<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, Flipzu!</string>
    <string name="app_name">Flipzu</string>
    <string name="fz_player_service_started">13891873198313</string>
    <string name="fz_recorder_service_started">23090928830923</string>
    <string name="fz_recorder_alert">23723</string>
    <string name="empty_title">Started a new flipzu</string>
    <string name="flipzu_finished">Finished</string>
    <string name="offline">Connection Lost</string>
    <string name="fb_login">Log in with Facebook</string>
    <string name="tw_login">Log in with Twitter</string>
    <string name="login">Log in</string>
    <string name="play_pause">play pause</string>
    <string name="live">live</string>
    <string name="recorded">recorded</string>
    <string name="startanewbroadcast">start a new live broadcast</string>
    <string name="startrecording">start broadcast</string>
    <string name="stoprecording">stop broadcast</string>
    <string name="share_fb">share on facebook</string>
    <string name="share_fb_pushed">share on facebook selected</string>
    <string name="share_tw">share on twitter</string>
    <string name="share_tw_pushed">share on twitter selected</string>
    <string name="live_at">LIVE at</string>
    <string name="stopped">Broadcast Stopped</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="loading">Loading...</string>
    <string name="your_friends">Your Friends</string>
    <string name="your_flipzus">Your Flipzus</string>
    <string name="everyone">Everyone</string>
    <string name="hottest">Hottest</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_fragment">New Fragment</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="golive">Go Live</string>
    <string name="entercomment">Enter your comment...</string>
    <string name="enter_search">Search for a topic...</string>
    <string name="enter_title">Enter broadcast title...</string>
    <string name="listening">Listening:</string>
    <string name="comments">Comments</string>
    <string name="empty_profile">This is your Profile tab, which is empty. Why don\'t you try pressing the top right button and SAY SOMETHING to the world? :-)</string>
    <string name="empty_search">No search results</string>
    <string name="empty_friends">You don\'t seem to be following anyone. Go play around and follow your favorite broadcasters, they will appear here!</string>
    <string name="empty_auth_failed">Authentication failed. Please logout and try again.</string>
    <string name="empty_hot">Empty</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="delete_broadcast">Delete Broadcast</string>
    <string name="share">Share</string>
    <string name="share_bcast_with">Share this broadcast with...</string>
    <string name="share_profile_with">Share this profile with...</string>
    <string name="nothanks">No, thanks</string>
    <string name="remind">Remind me later</string>
    <string name="rate_message">If you enjoy using %s, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_title">Rate %s</string>
    <string name="share_flipzu">Share this App</string>
    <string name="share_app">Share this App with...</string>
</resources>