<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:keepScreenOn="true">    
	<!--  recorder -->
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	
	    	<!-- broadcast title -->
			<EditText
    	    android:id="@+id/bcast_title"
    	    android:hint="@string/enter_title"
        	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="18sp"
	        android:singleLine="true"
	        android:selectAllOnFocus="true"
			style="@style/blue_edittext"
	        android:textColor="#000000"
	        android:paddingLeft="10dip"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="5dip"
	        android:layout_marginBottom="5dip"
    		/>
			
			<!-- shadow -->
			<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:background="@color/light_blue"
			android:layout_height="wrap_content">
				<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:background="@drawable/shadow"
				android:layout_height="5dip">
				</LinearLayout>	    
			</LinearLayout>
			
		    <!-- buttons -->
    		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:background="@color/light_blue"
    		android:paddingTop="10dip"
    		android:paddingLeft="5dip"
    		android:paddingRight="5dip"
    		android:paddingBottom="5dip"
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
			android:layout_height="wrap_content">
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    		android:orientation="vertical"
	    		android:layout_weight="1"
	    		android:layout_width="wrap_content"
				android:layout_height="wrap_content">
		    		<Button
					android:id="@+id/rec_but"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@string/startrecording"
					android:background="@drawable/rec_button">
					</Button>
					<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    	android:orientation="horizontal"
			    	android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:background="@drawable/vumeter"
				    >
				    <!-- <android.opengl.GLSurfaceView android:id="@+id/vuMeter"
			    	    android:layout_width="fill_parent"
			        	android:layout_height="4dip"
						android:layout_marginLeft="10dip"
						android:layout_marginRight="10dip"
						android:layout_marginTop="5dip"
				    	/> -->	
				    <com.flipzu.flipzu.VUMeter android:id="@+id/vuMeter"
			    	    android:layout_width="220dip"
			        	android:layout_height="5dip"
						android:layout_marginLeft="5dip"
						android:layout_marginRight="4dip"
						android:layout_marginTop="5dip"
				    	/>
					</LinearLayout>				
				</LinearLayout>
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    		android:orientation="vertical"
	    		android:layout_weight="1"
	    		android:gravity="right"
	    		android:layout_width="wrap_content"
				android:layout_height="fill_parent">
					<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    		android:orientation="horizontal"
		    		android:layout_weight="1"
		    		android:layout_width="wrap_content"
					android:layout_height="wrap_content">
						<Button
						android:id="@+id/share_fb"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_marginLeft="5dip"
						android:contentDescription="@string/share_fb"
						android:background="@drawable/facebook_button">
						</Button>
						<Button
						android:id="@+id/share_tw"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_marginLeft="5dip"
						android:contentDescription="@string/share_tw"
						android:background="@drawable/twitter_button">
						</Button>
					</LinearLayout>
					<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    		android:orientation="vertical"
		    		android:layout_weight="1"
		    		android:layout_gravity="right"
		    		android:layout_marginLeft="5dip"
		    		android:layout_marginRight="20dip"
		    		android:layout_width="wrap_content"
					android:layout_height="wrap_content">
						<TextView
						android:id="@+id/duration_tv"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textStyle="bold"
						android:textColor="@color/dark_gray"
						android:text="00:00">
						</TextView>					
					</LinearLayout>				
				</LinearLayout>
			</LinearLayout> <!-- end buttons -->
			<!-- listeners area -->
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:background="@color/light_blue"
		    android:orientation="horizontal"
		    android:gravity="right"
		    android:layout_width="fill_parent"
		    android:paddingBottom="10dip"
		    android:paddingRight="10dip"
			android:layout_height="wrap_content">
		    	<TextView
				android:id="@+id/listeners_label_tv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/listening"			
				android:textStyle="bold"
				android:textColor="@color/dark_gray"			
				android:layout_gravity="right">
				</TextView>
				<TextView
				android:id="@+id/listeners_tv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:textColor="@color/dark_gray"
				android:text="0">
				</TextView>
			</LinearLayout> <!-- end listeners -->			
	</LinearLayout> <!-- end recorder -->
	
	<!-- shadow -->
	<LinearLayout
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:background="@color/light_gray"
	android:layout_height="wrap_content">
		<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:background="@drawable/shadow"
		android:layout_height="5dip">
		</LinearLayout>	    
	</LinearLayout>	    
	
	<!-- Comments -->
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@color/light_gray"
    android:paddingLeft="5dip"
    android:paddingTop="5dip"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content">
		<TextView
		android:id="@+id/numcomments_label_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/comments"
		android:textStyle="bold"
		android:textColor="#000000"
		android:layout_gravity="left">
		</TextView>
	</LinearLayout>
	
	<!-- comments list -->
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/comments_scroll"
	android:scrollbars="none"
	android:paddingLeft="5dip"
	android:paddingRight="5dip"
	android:paddingBottom="5dip"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:background="@color/light_gray">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/comments_container"
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
		android:layout_height="wrap_content">
			<!-- dynamic comments go here -->
    	</LinearLayout>
	</LinearLayout>
	</ScrollView>
</LinearLayout>
	
	