<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <!-- bcast info box -->
    <LinearLayout
	android:background="@color/light_blue"
	android:orientation="horizontal"
	android:padding="10dip"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
		<!--  user avatar -->
		<LinearLayout
		android:orientation="horizontal"
		android:layout_marginRight="10dip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		    <ImageView
	        android:id="@+id/user_avatar"
	        android:layout_width="80dip"
	        android:layout_height="80dip"
	        android:src="@drawable/icon_sq" />		
		</LinearLayout>
		<!--  bcast username and title box -->
		<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
				<TextView
					android:padding="0dip"
					android:id="@+id/username"
					android:text=""
					android:textColor="@color/dark_blue"
					android:textStyle="bold"
					android:layout_width="fill_parent"
		            android:layout_height="wrap_content"/>
				<TextView
				android:padding="0dip"
				android:id="@+id/title"
				android:text="@string/empty_title"
				android:textColor="@color/dark_gray"
				android:layout_width="fill_parent"
	            android:textStyle="bold"
	            android:lines="2"
	            android:layout_height="wrap_content"/>
			<RelativeLayout
				android:id="@+id/toplayout"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
					<TextView
					android:padding="0dip"
					android:id="@+id/time_str"
					android:text="0 minutes ago"
					android:textColor="#666666"
					android:layout_alignParentLeft="true"
					android:layout_width="wrap_content"
		            android:layout_height="wrap_content"/>
		        	<ImageView
					android:id="@+id/livetag"
			        android:layout_alignParentLeft="true"
			        android:layout_width="wrap_content"
			        android:layout_height="fill_parent"
			        android:layout_gravity="center_vertical"
			        android:gravity="center"
			        android:visibility="invisible"
			        android:src="@drawable/live"
			        />					
		        	<ImageView
					android:id="@+id/headphones"
			        android:layout_toLeftOf="@+id/listeners"
			        android:layout_marginBottom="5dip"
			        android:layout_marginRight="2dip"
			        android:layout_width="14dip"
			        android:layout_height="14dip"
			        android:layout_gravity="center_vertical"
			        android:gravity="center"
			        android:src="@drawable/headphones" />
		     		<TextView
		            android:id="@+id/listeners"
		            android:layout_width="wrap_content"
		        	android:layout_alignParentRight="true"
		            android:textColor="#666666"
		            android:text="0"      
		            android:textSize="12dip"
		        	android:layout_height="wrap_content"
		        	android:layout_gravity="center_vertical"
		        	android:gravity="center"/>				
				</RelativeLayout>														    
		</LinearLayout>
	</LinearLayout>
	<!-- end bcast info box -->
	
	<!-- shadow -->
	<LinearLayout
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:background="@color/light_gray"
	android:layout_height="wrap_content">
		<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:background="@drawable/shadow"
		android:layout_height="5dip">
		</LinearLayout>	    
	</LinearLayout>
		
	<!-- comments edittext -->
 	<LinearLayout
	android:id="@+id/central_layout"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:background="@color/light_gray"
	android:layout_height="wrap_content">
			<EditText
			style="@style/blue_edittext"
			android:id="@+id/post_comment_et"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="14sp"
			android:hint="@string/entercomment"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_marginTop="5dip"
			android:paddingLeft="10dip"
			android:textColor="#555"
			android:singleLine="true"/>
 	</LinearLayout>
 	<!-- end comment edittext --> 	
 	
 	<!-- comments+ads+control layout / until end of screen -->
 	<LinearLayout
		android:orientation="vertical"
		android:background="@color/light_gray"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
 	    	    
		<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
			<!-- comments list -->
			<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:scrollbars="none"
			android:layout_above="@+id/adView"
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent">
				<LinearLayout
				android:id="@+id/comments_layout"
				android:orientation="vertical"
				android:paddingTop="10dip"
				android:paddingRight="10dip"
				android:paddingLeft="10dip"
				android:paddingBottom="80dip"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">				
				<!-- comments go here programatically --> 
				</LinearLayout>	
			</ScrollView>

			<!-- player controls -->
  	 		<RelativeLayout
			    android:id="@+id/player_controls"
				android:layout_above="@+id/adView"    			    
				android:orientation="vertical"
				android:background="@color/alpha_black"
				android:padding="10dip"
				android:layout_width="fill_parent"
				android:layout_height="75dip">				
					<Button
					android:id="@+id/play_toggle_btn"
					android:background="@drawable/play_button"
					android:layout_alignParentBottom="true"
					android:contentDescription="@string/play_pause"
					android:layout_width="55dip"
					android:layout_height="55dip"/>
				 	<LinearLayout
					android:layout_toRightOf="@+id/play_toggle_btn"
					android:layout_marginLeft="5dip"
					android:padding="3dip"
					android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent">
						<TextView
						android:id="@+id/player_title_bottom"
						android:paddingLeft="5dip"
						android:layout_width="fill_parent"
						android:textSize="14dip"
			            android:textStyle="bold"
			            android:textColor="#fff"
			            android:ellipsize="marquee"
			            android:marqueeRepeatLimit="marquee_forever"
			            android:focusable="true"
						android:focusableInTouchMode="true"
					    android:scrollHorizontally="true"
					    android:singleLine="true"
					    android:freezesText="true"						
			            android:lines="1"
			            android:layout_height="wrap_content"/>
			  	 		<RelativeLayout    			    
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content">																		
				        	<ImageView
							android:id="@+id/livetag_bottom"
					        android:layout_alignParentLeft="true"
					        android:layout_width="wrap_content"
					        android:layout_height="fill_parent"
					        android:layout_gravity="center_vertical"
					        android:paddingLeft="5dip"
					        android:visibility="invisible"
					        android:src="@drawable/live"/>
							<TextView
							android:padding="0dip"
							android:layout_marginTop="5dip"
							android:id="@+id/timer"
							android:layout_width="95dip" 
							android:layout_alignParentRight="true"
							android:textSize="14dip"
				            android:textStyle="bold"
				            android:textColor="#fff"
				            android:lines="1"
				            android:layout_height="wrap_content"/>
							<SeekBar
							android:visibility="gone"
							android:paddingLeft="5dip"
							android:paddingRight="5dip"
							android:id="@+id/seekbar"
							android:layout_width="fill_parent"
							android:layout_toLeftOf="@+id/timer"
				            android:layout_height="wrap_content"/>
						</RelativeLayout>			        	
					</LinearLayout>

			</RelativeLayout> 			            
		    
			    			    			
			<!--  Ads -->
			<com.google.ads.AdView android:id="@+id/adView"
			    android:background="#000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            
            ads:adUnitId="a14e36f60896b4d"
            ads:adSize="BANNER"
            ads:loadAdOnCreate="false"/>
					    				
        </RelativeLayout>
        
	</LinearLayout>
	<!--  end of bottom layout -->
 		       
</LinearLayout>